--- a/views/admin/partials/header.pug
+++ b/views/admin/partials/header.pug
@@ -1,27 +1,10 @@
-header.header-admin
-    .header-wrapper
-        .header-left
-            a.logo(href='/admin/dashboard')
-                img(src='/admin/images/logo.png', alt='Logo')
-            button.sidebar-toggle
-                i.fa.fa-bars
-        
-        .header-right
-            .admin-info
-                .admin-name Welcome, Admin
-                .dropdown
-                    button.dropdown-toggle
-                        i.fa.fa-user
-                        span.ml-2 Account
-                    .dropdown-menu
-                        a(href='/admin/profile')
-                            i.fa.fa-user-circle
-                            span Profile
-                        a(href='/admin/logout')
-                            i.fa.fa-sign-out
-                            span Logout
-            
-            .notifications
-                button.notification-toggle
-                    i.fa.fa-bell
-                    span.badge 3
+header.navbar.navbar-dark.bg-dark.header-admin
+  .container-fluid
+    button.btn.btn-outline-light.d-md-none.mr-3(type="button", data-toggle="collapse", data-target="#adminSidebar")
+      i.fas.fa-bars
+    a.navbar-brand(href=prefixAdmin + '/dashboard')
+      img(src='/admin/images/logo.svg', alt='Logo', width='30', class='d-inline-block align-top mr-2')
+      | Admin Panel
+    ul.navbar-nav.ml-auto
+      li.nav-item
+        a.nav-link(href="#") Xin chào, Admin
