--- a/views/client/pages/products/index.pug
+++ b/views/client/pages/products/index.pug
@@ -1,21 +1,84 @@
 extends ../../layouts/default.pug
 
-block main  
-    .container.my-3
-        .row
-            .col-12
-                .box-head
-                    h2.inner-title Danh sách sản phẩm
-
-        .row
-            each product in products
-                .col-4.mb-4
-                    .product-item
-                        .inner-image
-                            img(src="https://tongkhodieuhoa68.com/wp-content/uploads/2023/02/dieu-hoa-panasonic-9000-btu-1-chieu-inverter-u9zkh-8-510x510-2.jpg", alt=product.title)
-                        .inner-content  
-                            p(class="product-title") #{product.title}
-                            p(class="product-price-old") #{product.price} $
-                            p(class="product-price-new") #{product.priceNew} $
-                            
-                            a.btn.btn-primary(href=`/products/${product.id}`) Xem chi tiết
+block main
+  section.products-area.py-5
+    .container
+      .row.mb-4
+        .col-12
+          .section-heading.text-center
+            h2.display-4.font-weight-bold Danh sách sản phẩm
+            .divider.mx-auto.my-3
+              span.divider-dot
+              span.divider-line
+              span.divider-dot
+            p.text-muted Khám phá bộ sưu tập sản phẩm độc đáo và chất lượng cao của chúng tôi
+      
+      .row.mb-4
+        .col-md-6
+          form.form-inline
+            .input-group.w-100
+              input.form-control(type="text" placeholder="Tìm kiếm sản phẩm...")
+              .input-group-append
+                button.btn.btn-primary(type="submit")
+                  i.fa.fa-search
+        .col-md-6
+          .d-flex.justify-content-md-end.mt-3.mt-md-0
+            .dropdown.mr-3
+              button.btn.btn-outline-secondary.dropdown-toggle(type="button" data-toggle="dropdown") Sắp xếp
+              .dropdown-menu
+                a.dropdown-item(href="#") Giá: Thấp đến cao
+                a.dropdown-item(href="#") Giá: Cao đến thấp
+                a.dropdown-item(href="#") Mới nhất
+                a.dropdown-item(href="#") Phổ biến nhất
+            
+            .btn-group.btn-group-toggle(data-toggle="buttons")
+              label.btn.btn-outline-secondary.active
+                input(type="radio" name="view" checked)
+                i.fa.fa-th
+              label.btn.btn-outline-secondary
+                input(type="radio" name="view")
+                i.fa.fa-list
+      
+      .row
+        each product in products
+          .col-md-6.col-lg-4.mb-4
+            .card.product-card.h-100.shadow-sm.border-0
+              .product-badge
+                if product.discount
+                  span.badge.badge-danger -#{product.discount}%
+                if product.isNew
+                  span.badge.badge-success Mới
+              
+              .product-thumb.position-relative
+                img.card-img-top(src=product.thumbnail, alt=product.title)
+                .product-overlay
+                  .d-flex.justify-content-center
+                    a.btn.btn-sm.btn-outline-light.mx-1(href="#" title="Thêm vào giỏ")
+                      i.fa.fa-shopping-cart
+                    a.btn.btn-sm.btn-outline-light.mx-1(href="#" title="Yêu thích")
+                      i.fa.fa-heart
+                    a.btn.btn-sm.btn-outline-light.mx-1(href=`/products/${product.id}` title="Xem chi tiết")
+                      i.fa.fa-eye
+              
+              .card-body
+                h5.card-title.product-title.text-truncate #{product.title}
+                .d-flex.align-items-center.mb-2
+                  .product-rating
+                    - var rating = product.rating || 4
+                    - for (var i = 1; i <= 5; i++)
+                      if i <= rating
+                        i.fa.fa-star.text-warning
+                      else
+                        i.fa.fa-star.text-muted
+                  span.small.text-muted.ml-2 (#{product.reviews || 0} đánh giá)
+                
+                .product-price.d-flex.align-items-center
+                  span.product-price-old.text-muted.mr-2
+                    del #{product.price} đ
+                  span.product-price-new.font-weight-bold.text-primary #{product.priceNew} đ
+                
+                if product.description
+                  p.card-text.small.text-muted.mt-2 #{product.description.substring(0, 80)}...
+              
+              .card-footer.bg-white.border-0
+                a.btn.btn-primary.btn-block(href=`/products/${product.id}`) Xem chi tiết
