--- a/views/admin/partials/header.pug
+++ b/views/admin/partials/header.pug
@@ -1,10 +1,23 @@
-header.navbar.navbar-dark.bg-dark.header-admin
+header.navbar.navbar-expand-lg.navbar-dark.header-admin(
+  style="transition: all 0.3s ease;"
+)
   .container-fluid
-    button.btn.btn-outline-light.d-md-none.mr-3(type="button", data-toggle="collapse", data-target="#adminSidebar")
+    // Mobile sidebar toggle button
+    button.navbar-toggler.btn.btn-outline-primary.border-0(type="button", data-toggle="collapse", data-target="#adminSidebar", aria-controls="adminSidebar", aria-expanded="false", aria-label="Toggle sidebar")
       i.fas.fa-bars
-    a.navbar-brand(href=prefixAdmin + '/dashboard')
-      img(src='/admin/images/logo.svg', alt='Logo', width='30', class='d-inline-block align-top mr-2')
-      | Admin Panel
+
+    // Brand logo and title
+    a.navbar-brand.d-flex.align-items-center(href=prefixAdmin + '/dashboard')
+      img(src='/admin/images/logo.svg', alt='Admin Logo', width='36', height='36', class='d-inline-block.mr-2')
+      span.font-weight-bold Admin Panel
+
+    // Navbar items
     ul.navbar-nav.ml-auto
-      li.nav-item
-        a.nav-link(href="#") Xin chào, Admin
+      li.nav-item.d-flex.align-items-center
+        li.nav-item.dropdown
+          a.nav-link.dropdown-toggle.text-light.px-3.py-2.rounded(href="#", data-toggle="dropdown", aria-haspopup="true", aria-expanded="false")
+            i.fas.fa-user.mr-2
+            span Xin chào, Admin
+          .dropdown-menu.dropdown-menu-right
+            a.dropdown-item(href="/admin/profile") Hồ sơ
+            a.dropdown-item(href="/admin/logout") Đăng xuất
