--- a/views/client/partials/header.pug
+++ b/views/client/partials/header.pug
@@ -1,22 +1,35 @@
-header.header
-    .container
-        .row.align-items-center
-            .col-3
-                .inner-logo
-                    a(href="/")
-                        img(src="/images/logo.svg", alt="Logo")
-            .col-9
-                .inner-menu
-                    ul
-                        li
-                            a(href="/") Trang chủ
-                        li
-                            a(href="/products") Sản phẩm
-                        li 
-                            a(href="/about") Giới thiệu
-                        li 
-                            a(href="/contact") Liên hệ
-                        li 
-                            a(href="/login") Đăng nhập
-                        li
-                            a(href="/register") Đăng ký
+header.header.py-2.shadow-sm.bg-white.sticky-top
+  .container
+    nav.navbar.navbar-expand-lg.navbar-light.p-0
+      a.navbar-brand(href="/")
+        img.img-fluid(src="/images/logo.svg", alt="Logo", style="max-height: 45px;")
+      
+      button.navbar-toggler(type="button", data-toggle="collapse", data-target="#navbarMain", aria-controls="navbarMain", aria-expanded="false", aria-label="Toggle navigation")
+        span.navbar-toggler-icon
+      
+      .collapse.navbar-collapse#navbarMain
+        ul.navbar-nav.ml-auto
+          li.nav-item
+            a.nav-link.px-3.font-weight-bold(href="/")
+              i.fas.fa-home.mr-1
+              | Trang chủ
+          
+          li.nav-item
+            a.nav-link.px-3.font-weight-bold(href="/products")
+              i.fas.fa-box.mr-1
+              | Sản phẩm
+          
+          li.nav-item
+            a.nav-link.px-3.font-weight-bold(href="/about")
+              i.fas.fa-info-circle.mr-1
+              | Giới thiệu
+          
+          li.nav-item
+            a.nav-link.px-3.font-weight-bold(href="/contact")
+              i.fas.fa-envelope.mr-1
+              | Liên hệ
+          
+          li.nav-item.ml-2
+            a.btn.btn-primary.rounded-pill.px-4(href="/cart")
+              i.fas.fa-shopping-cart.mr-1
+              | Giỏ hàng
